2009-12-19  Dodji Seketeli  <dodji@redhat.com>

	PR c++/42225
	* g++.dg/template/typedef26.C: New test.

2009-12-19  Richard Guenther  <rguenther@suse.de>

	PR lto/42401
	* g++.dg/lto/20091219_0.C: New testcase.

2009-12-19  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/42108
	* gfortran.dg/pr42108.f90: New testcase.

2009-12-18  Jason Merrill  <jason@redhat.com>

	PR c++/28300
	* g++.dg/template/spec37.C: New.

	PR c++/42415
	* g++.dg/tc1/dr147.C: Add test.
	* g++.old-deja/g++.jason/temporary5.C: Adjust.

2009-12-18  Shujing Zhao  <pearly.zhao@oracle.com>

	* g++.old-deja/g++.brendan/misc6.C: Make expected dg-error strings
	explicit.

2009-12-17  Jakub Jelinek  <jakub@redhat.com>

	* gcc.dg/debug/dwarf2/const-1.c: Don't expect DW_AT_const_value,
	but instead DW_AT_location with DW_OP_addr+DW_OP_stack_value.  Add
	-gno-strict-dwarf -fno-merge-debug-strings to dg-options.
	* g++.dg/debug/dwarf2/const1.C: Likewise.
	* g++.dg/debug/dwarf2/template-params-3.C: Likewise.
	* g++.dg/debug/dwarf2/template-func-params-3.C: Likewise.

2009-12-17  Alexandre Oliva  <aoliva@redhat.com>

	PR debug/41679
	* gcc.target/arm/pr41679.c: New.

2009-12-17  Jakub Jelinek  <jakub@redhat.com>

	PR c++/42386
	* g++.dg/opt/dtor3.C: New test.

2009-12-17  Arnaud Charlet  <charlet@adacore.com>

	* ada/acats/run_all.sh: Strip comments from norun.lst

2009-12-17  Uros Bizjak  <ubizjak@gmail.com>

	PR target/32280
	* gcc.target/i386/pr32280-1.c: New test.

2009-12-17  Uros Bizjak  <ubizjak@gmail.com>

	* objc/execute/forward-1.x: XFAIL for -fgnu-runtime on
	x86_64-*-darwin*, powerpc*-*-darwin* and alpha*-*-linux* targets.

2009-12-17  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/42144
	* gfortran.dg/dynamic_dispatch_6.f03: New test.

2009-12-17  Shujing Zhao  <pearly.zhao@oracle.com>

	* g++.old-deja/g++.mike/net31.C: Make expected dg-error strings
	explicit.
	* g++.old-deja/g++.bugs/900213_02.C: Likewise.
	* g++.old-deja/g++.bugs/900215_02.C: Likewise.
