@@ -1,3 +1,8 @@
+2009-12-21  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR libfortran/PR42422
+	* gfortran.dg/list_read_10.f90:  New test.
+
 2009-12-19  Dodji Seketeli  <dodji@redhat.com>
 
 	PR c++/42225
